# pygpubench

./: CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: wheel.yml
csrc/: binding.cpp  check.cu  check.h  clear_l2.cu  manager.cpp  manager.h  obfuscate.cpp  utils.h
exploits/: benchmark.py  run_all.py  submission_combined.py  submission_correct.py  submission_error_counter.py  submission_fd_overwrite.py  submission_function_detour.py  submission_gc_copy.py  submission_gc_nan.py  submission_heap_sig_scan.py  submission_incomplete_bypass.py  submission_thread_fd.py  submission_warmup.py  submission_wrong.py
python/pygpubench/: __init__.py  _types.py  utils.py
test/: grayscale.py  submission.py
