[project]
name = "pygpubench"
version = "0.0.2"
description = "GPU kernel benchmarking utilities"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    { name = "Erik Schultheis", email = "erik.schultheis@ist.ac.at" }
]
dependencies = [
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: GPU :: NVIDIA CUDA :: 13",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
]

[project.urls]
Repository = "https://github.com/ngc92/pygpubench"
Issues = "https://github.com/ngc92/pygpubench/issues"

[build-system]
requires = ["scikit-build-core>=0.11", "nanobind"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "build-system.requires"
wheel.py-api = "cp312"
build.targets = ["_pygpubench"]
build-dir = "build/{wheel_tag}"
cmake.build-type = "RelWithDebInfo"

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "csrc/*" },
    { file = "python/*" },
    { file = "CMakeLists.txt" }
]
